fix: implement working compare and export buttons for backtest results
- Convert compareBtn and exportBtn to field variables for proper state management
- Implement exportResults() to export backtest trades and metrics to CSV file
- Implement compareResults() to display backtest summary metrics and trade analysis
- Enable export/compare buttons only when backtest completes successfully
- Add file chooser dialog for export destination selection
- Add helper showAlert() method for consistent error/info messaging
- Export includes date, side, order type, prices, profit, and trade reasons